--- a/src/components/Favorites/Favorites.module.scss
+++ b/src/components/Favorites/Favorites.module.scss
@@ -38,6 +38,7 @@ main {
 
 .products {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
+  gap: 0 50px;
   flex-wrap: wrap;
 }
