--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -1,5 +1,5 @@
 .card {
-  width: 210px;
+  width: 22%;
   background: #FFFFFF;
   border: 1px solid #F3F3F3;
   border-radius: 40px;
@@ -7,7 +7,6 @@
   margin-bottom: 30px;
   box-sizing: border-box;
   transition: all 0.2s ease-in-out;
-  // cursor: pointer;
 
   &:hover {
     box-shadow: 0px 14px 35px rgba(0, 0, 0, 0.06);
