--- a/src/components/Cart/Cart.module.scss
+++ b/src/components/Cart/Cart.module.scss
@@ -6,9 +6,22 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 1;
+  visibility: hidden;
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
+  overflow: hidden;
 }
 
-.rightSiteCart {
+.overlayVisible {
+  visibility: visible;
+  opacity: 1;
+
+  .rightSideCart {
+    transform: translateX(0);
+  }
+}
+
+.rightSideCart {
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
@@ -19,6 +32,8 @@
   background: #fff;
   box-shadow: -10px 4px 24px rgba(0, 0, 0, 0.1);
   padding: 30px;
+  transform: translateX(100%);
+  transition: all 0.3s ease-in-out;
 
   h2 {
     display: flex;
