--- a/src/components/Main/Main.module.scss
+++ b/src/components/Main/Main.module.scss
@@ -38,6 +38,7 @@ main {
 
 .products {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
+  gap: 0 4%;
   flex-wrap: wrap;
 }
